# aotearoa-voice

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  limits.py  main.py
backend/app/agent/: claude_client.py  mcp_client.py  system_prompt.py
backend/app/routes/: chat.py  synthesise.py  transcribe.py
backend/app/stt/: whisper_client.py
backend/app/voice/: elevenlabs_client.py
deploy/: cloudflared.config.yml
deploy/cloud-run/: README.md  deploy.sh
docs/: README.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AboutModal.tsx  MapView.tsx  ToolCallPanel.tsx  TranscriptPane.tsx  VoiceButton.tsx  Waveform.tsx
frontend/src/hooks/: useAudioRecording.ts
frontend/src/lib/: api.ts  locations.ts
mcp_server/: Dockerfile  pyproject.toml  server.py
mcp_server/data/: locations.json  pronunciations.json
mcp_server/tools/: __init__.py  find_locations.py  find_nearby.py  get_location_detail.py  get_pronunciation_guide.py  get_weather.py
scripts/: preflight.sh  pronunciations.pls  setup_pronunciation_dict.py
