[project]
name = "aotearoa-voice-backend"
version = "0.1.0"
description = "FastAPI orchestrator for the Aotearoa Voice demo (STT, agent loop, TTS)."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "anthropic>=0.39.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "mcp>=1.2.0",
  "slowapi>=0.1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
